fix: backend auth, sessions, deploy config

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,10 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+sqlalchemy>=2.0.25
+bcrypt==4.2.0
+python-multipart==0.0.12
+pydantic>=2.0.0
+
 
 
 
